-
Bug
-
Resolution: Done
-
P2: Important
-
5.0.0
-
None
The attached QML file is supposed to draw a circle with Canvas, but with a recent qtdeclarative master ( 0592e17e18e26acc177bc7556a3c9888582f0045 ) it doesn't seem to draw anything.
For Gerrit Dashboard: QTBUG-20523 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
2068,1 | fix canvas arc drawing bug | master | qt/qtdeclarative | Status: MERGED | +2 | 0 |