fix canvas arc drawing bug

Task-number:QTBUG-20523
Change-Id: I6ff71c12ffb66407cc5bbb4783e4c957ab740ac7
Reviewed-on: http://codereview.qt.nokia.com/2068
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Charles Yin <charles.yin@nokia.com>